# chess-oxide

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
doc/: crates.js  help.html  search-index.js  settings.html  src-files.js
doc/chess/: all.html  constant.BISHOP_OFFSET.html  constant.BLACK_KING_START.html  constant.KNIGHT_OFFSET.html  constant.LONG_BLACK_ROOK_START.html  constant.LONG_WHITE_ROOK_START.html  constant.MOVE_VEC_SIZE.html  constant.NULL_MOVE.html  constant.NULL_PIECE.html  constant.PAWN_OFFSET.html  constant.PROMOTION_PIECE_TYPES.html  constant.QUEEN_KING_OFFSET.html  constant.ROOK_OFFSET.html  constant.SHORT_BLACK_ROOK_START.html  constant.SHORT_WHITE_ROOK_START.html  constant.WHITE_KING_START.html  enum.MoveType.html  enum.PieceColour.html  enum.PieceType.html  enum.Square.html  fn.movegen.html  fn.movegen_in_check.html  fn.movegen_pos.html  index.html  sidebar-items.js  struct.AttackMap.html  struct.CastleMove.html  struct.DefendMap.html  struct.Move.html  struct.MovegenFlags.html  struct.Piece.html  struct.Position.html  trait.MoveMap.html  type.Offset.html  type.Pos64.html  type.PositionHash.html
doc/chess/board/: enum.GameState.html  index.html  sidebar-items.js  struct.Board.html  struct.BoardState.html  trait.Player.html
doc/chess/movegen/: constant.BISHOP_OFFSET.html  constant.BLACK_KING_START.html  constant.KNIGHT_OFFSET.html  constant.LONG_BLACK_ROOK_START.html  constant.LONG_WHITE_ROOK_START.html  constant.MOVE_VEC_SIZE.html  constant.NULL_MOVE.html  constant.NULL_PIECE.html  constant.PAWN_OFFSET.html  constant.PROMOTION_PIECE_TYPES.html  constant.QUEEN_KING_OFFSET.html  constant.ROOK_OFFSET.html  constant.SHORT_BLACK_ROOK_START.html  constant.SHORT_WHITE_ROOK_START.html  constant.WHITE_KING_START.html  enum.MoveType.html  enum.PieceColour.html  enum.PieceType.html  enum.Square.html  fn.movegen.html  fn.movegen_in_check.html  fn.movegen_pos.html  struct.CastleMove.html  struct.Move.html  struct.MovegenFlags.html  struct.Piece.html  trait.MoveMap.html  type.Offset.html
doc/chess/perft/: index.html  (+2 more)
doc/chess_gui/: all.html  enum.PieceColour_UI.html  enum.PieceType_UI.html  fn.main.html  fn.ui_convert_piece.html  index.html  sidebar-items.js  struct.Board_UI.html  struct.Piece_UI.html  type.PieceColourUI.html  type.PieceTypeUI.html  type.PieceUI.html
doc/chess_perft/: all.html  fn.main.html  index.html
src/: board.rs  engine.rs  errors.rs  fen.rs  lib.rs  macros.rs  magic.rs  mailbox.rs  main.rs  movegen.rs  notation.rs  perft.rs  pgn.rs  position.rs  storage.rs  test.rs  transposition.rs  util.rs  zobrist.rs
src/pgn/: notation.rs  tag.rs  token.rs
test_data/: test.pgn  test_lichess_export.pgn
ui/: board.slint  board_ui.slint  defs.slint  export.slint  import.slint  import_fen.slint  import_pgn.slint  main.slint  move_history.slint  settings.slint  theme.slint
(+82 files in other folders)
