[package]
name = "chess-oxide"
version = "0.2.3"
edition = "2021"
build = "build.rs"
description = "A chess engine library written in Rust, with a GUI bin to play against it."
license = "MIT"
repository = "https://github.com/GavinShox/chess-oxide"
keywords = ["chess", "engine", "library", "gui", "game"]

[lib]
name = "chess"
path = "src/lib.rs"

[[bin]]
name = "chess-gui"
path = "src/bin/chess-gui.rs"

[[bin]]
name = "chess-perft"
path = "src/bin/chess-perft.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
static_init = "1.0.3"
log = "0.4"
env_logger = "0.11"
slint = "1.7.2"
ahash = "0.8.11"

[build-dependencies]
slint-build = "1.7.2"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.test]
opt-level = 3 # optimise for performance heavy perft tests

[profile.dev]
opt-level = 1
