[package]
authors = ["Gavin Shaughnessy <gavinshaughnessy@gmail.com>"]
name = "chess-oxide"
version = "0.4.0"
edition = "2021"
build = "build.rs"
description = "A chess engine library written in Rust, with a GUI bin to play against it."
license = "MPL-2.0"
repository = "https://github.com/GavinShox/chess-oxide"
keywords = ["chess", "engine", "library", "gui", "game"]

[lib]
name = "chess"
path = "src/lib.rs"

[[bin]]
name = "chess-gui"
path = "src/bin/chess-gui.rs"

[[bin]]
name = "chess-perft"
path = "src/bin/chess-perft.rs"

[features]
default = []
debug_engine_logging = []

[dependencies]
rand = "0.8.5"
static_init = "1.0.3"
log = "0.4"
env_logger = "0.11"
slint = "1.8.0"
ahash = "0.8.11"
chrono = "0.4.38"
native-dialog = "0.7.0"

[build-dependencies]
slint-build = "1.8.0"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[profile.test]
opt-level = 2 # optimise for performance heavy perft tests

[profile.dev-perf]
inherits = "dev"
opt-level = 1
